--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-reqwest = { version = "0.12.24", features = ["cookies", "json"] }
-scraper = "0.24.0"
+reqwest = { version = "0.13.1", features = ["cookies", "json", "form"] }
+scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
-thiserror = "2.0.17"
-tokio = { version = "1.48.0", features = ["full"] }
-chrono = { version = "0.4", features = ["serde"] }
+thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["full"] }
+chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15"
