--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-reqwest = { version = "0.13.1", features = ["cookies", "json", "form"] }
+reqwest = { version = "0.13.1", features = ["cookies", "json", "form", "multipart"] }
 scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.18"
