--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15"
+rand = "0.9"
