--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ tokio = { version = "1.49.0", features = ["full"] }
 chrono = { version = "0.4.43", features = ["serde"] }
 dotenvy = "0.15"
 rand = "0.9"
+serde_json = "1.0"
+async-trait = "0.1"
